<resources>
    <string name="app_name">StockUp</string>
    <string name="药品">药品</string>
    <string name="化妆品">化妆品</string>
    <string name="饮料">饮料</string>
    <string name="食物">食物</string>
    <string name="添加">添加</string>
    <string name="保质期">保质期</string>
    <string name="生产日期">生产日期</string>
    <string name="过期日期">过期日期</string>
    <string name="物资">物资</string>
    <string name="开封日期">开封日期</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="calendar">calendar</string>
    <string name="数量">数量</string>
    <string name="reminder">当前为空，快去添加吧</string>
    <string name="title_activity_tips_view">TipsView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>