<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".add_stock" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <!--        返回按钮-->
            <Button
                android:id="@+id/btn_return"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_baseline_arrow_back_24"></Button>

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="100dp"
                android:gravity="center"
                android:text="@string/添加"
                android:textColor="@color/black"
                android:textSize="40dp"></TextView>

            <Button
                android:id="@+id/btn_QR"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="90dp"
                ></Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp">
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="#aa000000" />

        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="245dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_object_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="请输入产品名称"></EditText>

                    <Spinner
                        android:id="@+id/sp_object"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:entries="@array/objectArray"
                        android:spinnerMode="dialog"></Spinner>

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_object_image"
                    android:layout_width="113dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/choosephoto_background"></ImageView>

            </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="245dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/保质期"
                    android:textSize="23dp"></TextView>

                <!--            保质期-->
                <EditText
                    android:id="@+id/et_guarantee_date"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="请输入数字"
                    android:inputType="number"
                    ></EditText>

            </LinearLayout>

            <RadioGroup
                android:id="@+id/rg_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_day"
                    android:layout_width="45dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/radiobutton_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="天"
                    android:textSize="20dp"></RadioButton>

                <RadioButton
                    android:id="@+id/rb_month"
                    android:layout_width="45dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="30dp"
                    android:text="月"
                    android:background="@drawable/radiobutton_background"
                    android:button="@null"
                    android:gravity="center"
                    android:layout_marginRight="5dp"
                    android:textSize="20dp"></RadioButton>

                <RadioButton
                    android:id="@+id/rb_year"
                    android:layout_width="45dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="30dp"
                    android:text="年"
                    android:button="@null"
                    android:gravity="center"
                    android:background="@drawable/radiobutton_background"
                    android:textSize="20dp"></RadioButton>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/生产日期"
                android:textSize="23dp"></TextView>

            <EditText
                android:id="@+id/et_produce_date"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:hint="点击选择日期"
                android:background="@drawable/edit_text_bg"
                android:paddingLeft="20dip"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                ></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/过期日期"
                android:textSize="23dp"
                ></TextView>

            <EditText
                android:id="@+id/et_after_date"
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:focusable="false"
                android:hint="自动生成 或 点击选择日期"
                android:inputType="date"
                android:paddingLeft="20dip"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                ></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="386dp"
            android:layout_height="350dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="产品数量"
                android:textSize="23dp"></TextView>

            <com.example.stockup.AddAndDecreaseButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                ></com.example.stockup.AddAndDecreaseButton>

            <TextView
                android:id="@+id/tv_open_date"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/开封日期"
                android:textSize="23dp"
                android:visibility="gone"></TextView>

            <EditText
                android:id="@+id/et_open_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:focusable="false"
                android:hint="点击选择日期"
                android:inputType="date"
                android:paddingLeft="20dip"
                android:visibility="gone"></EditText>

            <TextView
                android:id="@+id/tv_remarks"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="备注"
                android:textSize="23dp"
                android:visibility="gone"
                ></TextView>

            <EditText
                android:id="@+id/et_remarks"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="输入摆放地点/注意事项/etc"
                android:background="@drawable/edit_text_bg"
                android:visibility="gone"
                ></EditText>

            <Button
                android:id="@+id/btn_else"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableBottom="@drawable/ic_baseline_expand_more_24"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="其他选项"
                android:textColor="#000000"
                android:textSize="11sp"
                ></Button>


        </LinearLayout>


            </LinearLayout>
        </ScrollView>


<!--        底部固定-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_save"
                android:text="保存"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:gravity="center"
                ></Button>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>